# Sivera

./: .gitignore  .pre-commit-config.yaml  LINTING.md  Makefile  README.md  docker-compose.candidate.yml  docker-compose.recruiter.yml  setup-precommit.sh
.cursor/rules/: backend-rules.mdc  frontend-rules.mdc
.github/workflows/: main-app-deploy.yml  recruiter-app-deploy.yml
72/8f49a13d5a/: metadata.json
72/8f49a13d5a/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  sample_skill_based_flow.json  setup_pre_commit.sh
backend/src/constants/: ai_models.py  prompts.py
backend/src/core/: config.py
backend/src/lib/: manager.py
backend/src/llm_handler/: analytics.py  flow_generator.py  generic_llm.py
backend/src/router/: path_router.py
backend/src/scripts/: cleanup_daily_rooms.py
backend/src/services/: analytics.py  bot_defaults.py  devops_flow.json  handler_functions.py  interview_flow.py  llm_factory.py  sde1_coding_discussion.json  sde1_improved_flow.json  sde1_interview_flow.json  tts_factory.py
backend/src/services/flows/: default.json
backend/src/services/phone_screening/: phone_bot_runner.py
backend/src/services/phone_screening/daily/: phone_screen.py
backend/src/storage/: __init__.py
backend/src/utils/: daily_helper.py  link_scraper.py  logger.py  resume_extractor.py
backend/storage/: db_manager.py  migrations.sql
flowterview-app/: .eslintrc.json  Dockerfile  README.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
flowterview-app/src/: middleware.ts
flowterview-app/src/app/: auth-listener.tsx  globals.css  layout.tsx  page.tsx  query-provider.tsx  store-initializer.tsx
flowterview-app/src/components/: CompanySetupModal.tsx  UserSetupModal.tsx  app-sidebar.tsx  dark-mode-toggle.tsx  error-boundary.tsx
flowterview-app/store/: analyticsStore.ts  authStore.ts  candidatesStore.ts  dashboardStore.ts  index.ts  interviewsStore.ts  jobsStore.ts  types.ts
flowterview-backend/: .env  .gitignore  .pre-commit-config.yaml  .watchignore  Dockerfile  FIXES_SUMMARY.md  README.md  debug_db.py  main.py  pyproject.toml  run_migration.py
flowterview-backend/migrations/: 001_add_interview_recordings.sql  verification_tokens.sql
flowterview-backend/src/core/: config.py
flowterview-backend/src/lib/: manager.py
flowterview-backend/src/router/: analytics_router.py  candidate_router.py  interview_router.py  invites_router.py  linkedin_oauth_router.py  organization_router.py  phone_screen_router.py  recording_router.py  round_router.py  user_router.py
flowterview-backend/src/services/: phone_screen_scheduler.py  video_optimizer.py
flowterview-backend/src/utils/: auth_middleware.py  daily_helper.py  linkedin_api.py  llm_factory.py  logger.py
flowterview-backend/storage/: db_manager.py  migrations.sql
frontend/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  logos.tsx  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
frontend/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
(+105 files in other folders)
