[project]
name = "Hexagon-AI"
version = "0.1.0"
description = "Ai Interviewer for Hexagon-A"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.9.3",
    "fastapi[standard]>=0.115.8",
    "google-generativeai>=0.8.4",
    "openai>=1.59",
    "pipecat-ai[silero,daily,elevenlabs,google,deepgram,openai,websocket,cartesia,sentry]>=0.0.62",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "loguru>=0.7.3",
    "pipecat-ai-flows>=0.0.15",
]

[project.optional-dependencies]
dev = [
    "ruff"
]

[tool.ruff.lint.isort]
force-single-line = false
force-wrap-aliases = true
force-sort-within-sections = true
combine-as-imports = true

