[project]
name = "flowterview-backend"
version = "0.1.0"
description = "Flowterview Backend Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.3",
    "supabase>=1.0.3",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "aiosmtplib>=2.0.2",
    "email-validator>=2.1.0.post1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.5.0"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "B904", "ARG001"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = false
force-wrap-aliases = true
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
